# robodk

./: .gitattributes  .gitignore  CLAUDE.md  Tasni.command  pyproject.toml  rdk_extract.py  rdk_session.py  rdk_sync.py  serve.ps1  start.bat  start.ps1  start.sh
archive/robodk/: README.md  RoboDKsync570.src
assets/: install_shortcut.ps1  make_icon.py
docs/: agent-debug-map.md  best-practices-review.md  calibration-aiming-guidance-handoff.md  flat-workframe-validation-handoff.md  jetson-scanner.md  scan-coverage-dots-handoff.md  scan-survey-planner-handoff.md  scan-workbox-handoff.md
macros/: 3DScan.py  3DScanParam.py  ArucoToPlane.py  AutoScanTargetDefinition.py
server/: README.md  client_unicast_asyncio.py  jetson-autopull.service  jetson-autopull.sh  jetson-autopull.timer  nksr_reconstruct.py  realsense-camera.service  robodk_3dscanning.py  robodk_client_ArucoToPoints.py  robodk_client_syncronous_cv_calibrate.py  robodk_client_syncronous_cv_calibrate_dynamicRes.py  scan_overlay.py  server_unicast_asyncio.py  server_unicast_syncronous.py  server_unicast_syncronous_dynamicRes.py
tasni/: README.md  __init__.py  __main__.py  cli.py
tasni/core/: __init__.py  aiming.py  camera.py  camera_lease.py  charuco_types.py  config.py  events.py  geometry.py  health.py  jobrunner.py  livepreview.py  logging.py  rdk_io.py  runs.py  session.py
tasni/modules/: __init__.py  base.py  (+1 more)
tests/: test_board_pdf.py  test_calibration_job.py  test_calibration_synthetic.py  test_camera_lease.py  test_camera_wire.py  test_collision_guard.py  test_detection.py  test_diagnose.py  test_gate.py  test_intrinsics_calib.py  test_livepreview.py  test_pose_generation.py  test_robot_link.py  test_runs.py  test_scan_config.py  test_scan_depth_gate.py  test_scan_job.py  test_scan_overlay.py  test_scan_plane.py  test_scan_planner.py  test_scan_reconstruct.py  test_scan_survey.py  test_scan_telemetry_server.py  test_sim_tour.py
tools/: collision_probe.py  jetson_deploy.py  jetson_intrinsics.py  jetson_probe.py  robot_probe.py  scan_coverage_report.py
(+50 files in other folders)
